--- a/apps/api-frontend/src/app/pages/search-pages/search-result.css
+++ b/apps/api-frontend/src/app/pages/search-pages/search-result.css
@@ -1,12 +1,4 @@
-.loading-container {
-  display: flex;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.single-result-container p {
+.app .results-container .single-result-container p {
   padding: 1rem;
   text-align: left;
 }
