--- a/apps/api-frontend/src/app/app.css
+++ b/apps/api-frontend/src/app/app.css
@@ -1,5 +1,5 @@
 .app {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: sans-serif;
   min-width: 300px;
   max-width: 600px;
   margin: 50px auto;
